tests/ui/specialization/overlap-due-to-unsatisfied-const-bound.stderr
warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/overlap-due-to-unsatisfied-const-bound.rs:3:39
   |
LL | #![feature(associated_const_equality, specialization)]
   |                                       ^^^^^^^^^^^^^^
   |
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
   = help: consider using `min_specialization` instead, which is more stable and complete
   = note: `#[warn(incomplete_features)]` on by default

error[E0119]: conflicting implementations of trait `Maybe<()>` for type `()`
  --> $DIR/overlap-due-to-unsatisfied-const-bound.rs:18:1
   |
LL | impl<T> Maybe<T> for T {}
   | ---------------------- first implementation here
LL | impl<T> Maybe<T> for () where T: NotVoid + ?Sized {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `()`

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0119`.
